Changelog:
>Fixed gridline saving

To do:
>Add more settings items (Game speed, etc.)
>Maybe add more themes